@@ -13,5 +13,4 @@ platform = atmelsam
 board = adafruit_circuitplayground_m0
 framework = arduino
 monitor_speed = 115200
-
 lib_deps = adafruit/Adafruit Circuit Playground@^1.12.0
